--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ header {
 
 main {
     display: grid;
-    grid-template-rows: 1fr 400px 40px 1fr;
+    grid-template-rows: 40px 400px 40px 50px;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
@@ -15,21 +15,35 @@ main {
     background: black;
 }
 
-.pegs {
+.container {
     grid-row: 2;
-    grid-column: 1 / span 3;
-    display: flex;
-    justify-content: space-around;
+    width: auto;
+    height: auto;
 }
 
-.peg {
+.container1 {
+    grid-column: 1;
+    /* background: red; */
+}
+
+.container2 {
+    grid-column: 2;
+    /* background: green; */
+}
+
+.container3 {
+    grid-column: 3;
+    /* background: blue; */
+}
+
+/* .peg {
     height: 400px;
     width: 25px;
     background: black;
-}
+} */
 
-.ring {
+/* .ring {
     height: 25px;
     width: 100px;
     background: blue;
-}
+} */
