--- a/css/style.css
+++ b/css/style.css
@@ -41,11 +41,10 @@ main {
 }
 
 .peg {
-    height: 400px;
     background: black;
 }
 
-.peg, .ring {
+.ring {
     margin: 0 auto;
     height: 25px;
     border: 3px solid black;
