--- a/css/style.css
+++ b/css/style.css
@@ -25,17 +25,17 @@ main {
     justify-content: flex-end;
 }
 
-.container1 {
+#container1 {
     grid-column: 1;
     /* background: red; */
 }
 
-.container2 {
+#container2 {
     grid-column: 2;
     /* background: green; */
 }
 
-.container3 {
+#container3 {
     grid-column: 3;
     /* background: blue; */
 }
