--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@ main {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+.containers {
+    grid-row: 2;
+    grid-column: 1 / span 3;
+
+    display: flex;
+    justify-content: space-around;
+    /* display: grid;
+    grid-template-rows: 400px;
+    grid-template-columns: 1fr 1fr 1fr; */
+}
+
 .base {
     grid-row: 3;
     grid-column: 1 / span 3;
@@ -16,29 +27,24 @@ main {
 }
 
 .container {
-    grid-row: 2;
-    width: auto;
-    height: auto;
+    /* grid-row: 1; */
 
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
 
-#container1 {
+/* #container1 {
     grid-column: 1;
-    /* background: red; */
 }
 
 #container2 {
     grid-column: 2;
-    /* background: green; */
 }
 
 #container3 {
     grid-column: 3;
-    /* background: blue; */
-}
+} */
 
 .peg {
     height: 400px;
