--- a/css/style.css
+++ b/css/style.css
@@ -12,11 +12,11 @@ main {
     grid-row: 2;
     grid-column: 1 / span 3;
 
-    display: flex;
-    justify-content: space-around;
-    /* display: grid;
+    /* display: flex;
+    justify-content: space-around; */
+    display: grid;
     grid-template-rows: 400px;
-    grid-template-columns: 1fr 1fr 1fr; */
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .base {
@@ -27,14 +27,12 @@ main {
 }
 
 .container {
-    /* grid-row: 1; */
-
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
 
-/* #container1 {
+#container1 {
     grid-column: 1;
 }
 
@@ -44,7 +42,7 @@ main {
 
 #container3 {
     grid-column: 3;
-} */
+}
 
 .peg {
     height: 400px;
