--- a/css/style.css
+++ b/css/style.css
@@ -44,5 +44,6 @@ main {
 .ring {
     margin: 0 auto;
     height: 25px;
-    border: 3px solid black;
+    border: 2.5px solid black;
+    text-align: center;
 }
