--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ header, footer {
 
 main {
     display: grid;
-    grid-template-rows: 150px 400px 40px 100px;
+    grid-template-rows: 125px 400px 40px 125px;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
@@ -75,6 +75,7 @@ main {
     grid-row: 4;
 
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
